feat: introduce ComputedElementSubState to manage sub-states with IDs and enhance state resolution logic